--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,6 +38,6 @@ jobs:
     - name: Upload Build
       uses: actions/upload-artifact@v3
       with:
-        name: upload arr
+        name: upload aar
         path: |
-          lib/build/outputs/arr/*.arr
+          lib/build/outputs/aar/*.aar
